--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
   "content_scripts": [
     {
       "matches": ["https://mail.google.com/*"],
-      "js": ["scripts/content.js", "scripts/button.js"]
+      "js": ["scripts/content.js"]
     }
   ]
 }
