--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Intellimail",
-  "description": "Let AI write your emails for you",
-  "version": "1.3",
+  "description": "Your personal email assistant",
+  "version": "1.4",
   "manifest_version": 3,
   "icons": {
     "48": "assets/imlogo.png",
@@ -16,7 +16,7 @@
   "background": {
     "service_worker": "scripts/contextMenuServiceWorker.js"
   },
-  "permissions": ["contextMenus"],
+  "permissions": [],
   "host_permissions": ["https://mail.google.com/*"],
 
   "content_scripts": [
