[Bounty] Authentication Verification for IntelliMail
This is the submission code for the following Repl.it Bounty:

https://replit.com/bounties/@ShubhKathuria/add-authentication-t?t=

This Bounty was fulfilled by @IMGROOT2 (https://github.com/IMGROOT2).

--- a/manifest.json
+++ b/manifest.json
@@ -16,14 +16,18 @@
   "background": {
     "service_worker": "scripts/contextMenuServiceWorker.js"
   },
-  "permissions": [],
-  "host_permissions": ["https://mail.google.com/*"],
+  "permissions": ["storage"],
+  "host_permissions": ["https://mail.google.com/*", "https://airtable.com/shrwhYNbbwUGfRlu5"],
 
   "content_scripts": [
     {
       "matches": ["https://mail.google.com/*"],
       "js": ["scripts/content.js"],
       "css": ["css/content.css"]
+    },
+    {
+      "matches": ["https://airtable.com/shrwhYNbbwUGfRlu5"],
+      "js": ["scripts/airtable.js"]
     }
   ],
   "web_accessible_resources": [
