--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Intellimail",
-  "description": "Your personal email assistant",
-  "version": "1.6",
+  "name": "IntelliMail",
+  "description": "Your AI email assistant",
+  "version": "1.6.4",
   "manifest_version": 3,
   "icons": {
     "48": "assets/imlogo.png",
@@ -16,8 +16,8 @@
   "background": {
     "service_worker": "scripts/contextMenuServiceWorker.js"
   },
-  "permissions": ["storage"],
-  "host_permissions": ["https://mail.google.com/*", "https://airtable.com/shrwhYNbbwUGfRlu5"],
+  "permissions": [],
+  "host_permissions": ["https://mail.google.com/*"],
 
   "content_scripts": [
     {
